Revision history for {{$dist->name}}

{{$NEXT}}

0.20      2014-06-10 20:32:27 -0400
  - mark prereqs as dynamic

0.19      2014-06-10 20:17:45 -0400
  - dynamic libs handle upgrades more gracefully
  - promote to production

0.18_06   2014-06-10 10:39:36 -0400
  - Archive::Libarchive::XS dev compat

0.18_05   2014-06-10 10:19:42 -0400
  - require Alien::Libarchive::Installer 0.03

0.18_04   2014-06-10 09:19:32 -0400
  - cflags reference bug fix

0.18_03   2014-06-10 09:06:55 -0400
  - fix prereqs

0.18_02   2014-06-10 08:36:20 -0400
  - libs and cflags now return a list in list context and a scalar in scalar context
    (used to always return a scalar)

0.18_01   2014-06-10 08:19:36 -0400
  - completely new implementation based on Alien::Libarchive::Installer instead of Alien::Base

0.18      2014-02-03 16:40:43 -0500
  - Fix ExtUtils::CChecker calling error

0.17      2014-02-03 16:37:39 -0500
  - remove -fPIC / -fno-common detection and instead rely on $Config{cccdlflags}
  - use $Config{optimize} for CFLAGS passed to libarchive configure

0.16      2014-02-02 04:30:52 -0500
  - build with -fPIC if possible

0.15      2014-01-29 11:30:49 -0500
  - fix prereqs

0.14      2014-01-29 09:37:52 -0500
  - build with -fno-common if possible

0.12      2014-01-02 10:59:11 -0500
  - require Alien::Libarchive::MSWin32 0.04 on MSWin32

0.11      2013-12-24 09:26:53 -0500
  - require Alien::Libarchive::MSWin32 0.02 on MSWin32

0.10      2013-12-19 03:04:41 -0500
  - fix for beter detection of libarchive sans pkg-config as a system install
    (runtime didn't work on non-FreeBSD systems)

0.09      2013-12-18 09:06:08 -0500
  - verify Alien deps flags can at least compile a simple c program
  - better detection of libarchive sans pkg-config as a system install

0.08      2013-12-12 17:07:56 -0500
  - documentation
  - try to use Alien::bz2 if available
  - include bin directory in PATH for cygwin install_type = share 
    so dll can be found