@@ -32,6 +32,7 @@ Alien::Libarchive::Installer = 0.03
 
 [Prereqs / BuildRequires]
 Alien::Libarchive::Installer = 0.03
+Alien::bz2::Installer        = 0.02
 
 [Prereqs]
 Alien::Libarchive::Installer = 0.03
