@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - use Alien::bz2::Installer if possible to build libbz2 if it is not provided by OS
 
 0.20      2014-06-10 20:32:27 -0400
   - mark prereqs as dynamic
